# RetrySQL

./: Makefile  README.md  pyproject.toml
configs/: llm_endpoints.yaml
configs/open_source_llms/: opencoder.yaml
configs/schema_linking/: schema_linking_dummy_embedder.yaml  schema_linking_edit_distance.yaml  schema_linking_exact_match.yaml  schema_linking_gemini_pro.yaml  schema_linking_openai_text_embedding_3_large.yaml  schema_linking_openai_text_embedding_ada_002.yaml  schema_linking_snowflake_arctic_embed_l.yaml  schema_linking_snowflake_arctic_embed_m.yaml  schema_linking_snowflake_arctic_embed_m_long.yaml
resources/schema_links/: gemini-pro-temperature-0.0-max-output-2048_cot-with-knowledge-pydantic-mapping-postprocessed-schema-links.jsonl  ground_truth_schema_links_bird_dev.jsonl
scripts/: pretrain_deepspeed.sh  sft_lora_deepseed.sh  sft_lora_torchrun.sh
tests/datasets/: test_raw_dataset_dumping_for_retrieval.py  test_schema_link_parser.py
tests/evaluation/: test_bird_metrics.py  test_schema_linking_metrics.py
tests/generation/: test_open_source_llm_generation.py
tests/helpers/: builders.py  domain.py
tests/llm_training/: test_datasets_tokenization.py  test_pretraining.py
tests/schema_linking/: test_edit_distance_based_schema_linkers.py  test_embedding_based_schema_linking.py  test_exp_artifacts_storing_utilities.py  test_schema_linking_query_document_data_processor.py  test_search_index.py
text2sql/: settings.py
text2sql/commons/: constants.py  io_utils.py  list_enum.py  logging_utils.py
text2sql/datasets/: base_dataset.py  (+1 more)
(+90 files in other folders)
